force-app/main/default/objects/AlbumArtist__c/AlbumArtist__c.object-meta.xml
<CustomObject>
    <label>AlbumArtist</label>
    <nameField>
        <displayFormat>AA-{000000}</displayFormat>
        <label>AlbumArtist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AlbumArtists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>