force-app/main/default/objects/AlbumArtist__c/fields/Album__c.field-meta.xml
<CustomField>
    <fullName>Album__c</fullName>
    <label>Album</label>
    <referenceTo>Album__c</referenceTo>
    <relationshipLabel>AlbumArtist</relationshipLabel>
    <relationshipName>AlbumArtist</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>