force-app/main/default/objects/AlbumArtist__c/fields/AlbumArtist__c.field-meta.xml
<CustomField>
    <fullName>AlbumArtist__c</fullName>
    <label>Album Artist</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>