force-app/main/default/objects/AlbumArtist__c/fields/Artist__c.field-meta.xml
<CustomField>
    <fullName>Artist__c</fullName>
    <label>Artist</label>
    <referenceTo>Artist__c</referenceTo>
    <relationshipLabel>AlbumArtist</relationshipLabel>
    <relationshipName>AlbumArtist</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>